Local Storage setup

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 
 <body>
 
-    <main class="">
+    <section class="gamePlayPanel">
+        <h1>Tic Tac Toe Game</h1>
+        <div class="gameBtn1">
+            <button class="gameBtns" id="twoplayers">2 Players</button>
+            <button class="gameBtns" id="computer">Human vs Computer</button>
+        </div>
+    </section>
+
+    <main class="main1" style="display: none;">
+
+        <a href="/" class="back"><img src="./image/6iroLKyiK.jpg" width="30" alt=""></a>
         <h1>Tic Tac Toe Game</h1>
 
         <div class="player">
@@ -62,10 +72,11 @@
             <p class="emoji2">⛔ 🤗</p>
         </div>
 
+
         <div class="gameBtn">
             <button class="" id="start">Start Game</button>
             <div class="whichPlayer">
-                <p>Player 1's Turn...</p>
+                <p class="next">Player 1's Turn...</p>
             </div>
             <button class="" id="restart">Restart</button>
         </div>
