--- a/with_computer.html
+++ b/with_computer.html
@@ -11,7 +11,17 @@
 
 <body>
 
-    <main class="">
+    <section class="gamePlayPanel">
+        <h1>Tic Tac Toe Game</h1>
+        <div class="gameBtn2">
+            <button class="gameBtns" id="easy">Easy</button>
+            <button class="gameBtns" id="hard">Hard</button>
+        </div>
+    </section>
+
+    <main class="main2" style="display: none;">
+
+        <a href="/" class="back"><img src="./image/6iroLKyiK.jpg" width="30" alt=""></a>
         <h1>Tic Tac Toe Game</h1>
 
         <div class="player">
@@ -58,6 +68,10 @@
             <p id="result">Rejoice Wins</p>
             <p class="emoji1">&#128516; &#128079; &#128165; &#127881;</p>
             <p class="emoji2">⛔ 🤗</p>
+        </div>
+
+        <div class="buffer" id="buffer">
+            <img autoplay src="./image/loading-buffering.gif">
         </div>
 
         <div class="gameBtn">
