back button fixes

--- a/with_computer.html
+++ b/with_computer.html
@@ -21,7 +21,7 @@
 
     <main class="main2" style="display: none;">
 
-        <a href="/" class="back"><img src="./image/6iroLKyiK.jpg" width="30" alt=""></a>
+        <a href="index.html" class="back"><img src="./image/6iroLKyiK.jpg" width="30" alt=""></a>
         <h1>Tic Tac Toe Game</h1>
 
         <div class="player">
