Hard Version Update

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
         <input class="checkbox" type="checkbox" id="check">
         <input class="checkbox" type="checkbox" id="endcheck">
         
+        <div class="slashHold">
+            <img class="horistroke hori1" src="./image/diagonal.png" width="330" alt="">
+            <img class="horistroke hori2" src="./image/diagonal.png" width="330" alt="">
+            <img class="horistroke hori3" src="./image/diagonal.png" width="330" alt="">
+            <img class="vertistroke verti1" src="./image/diagonal.png" width="330" alt="">
+            <img class="vertistroke verti2" src="./image/diagonal.png" width="330" alt="">
+            <img class="vertistroke verti3" src="./image/diagonal.png" width="330" alt="">
+            <img class="diagonstroke" src="./image/diagonal.png" width="400" alt="">
+            <img class="slashstroke" src="./image/diagonal.png" width="400" alt="">
+        </div>
+        
         <div class="container">
             <div class="box"></div>
             <div class="box"></div>
